# botw-item-assets

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  index.html  package.json  vite.config.ts
animate/: Taskfile.yml
generator/: canvas.rs  error.rs  main.rs  sprite_sheet.rs
src/: ActorSprite.tsx  ModifierSprite.tsx  index.ts
src/mock/: ActorMetadata_mock.ts  ActorRemap_mock.ts  ModifierMetadata_mock.ts
src/test/: TestApp.tsx  main.tsx
test/: main.tsx
